src/objects/Transaction__c.object
<CustomObject>
    <description>Represent a movement of money between Financial Accounts</description>
    <fields>
        <fullName>GivingFinancialAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Giving Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Transactions (Giving Financial Account)</relationshipLabel>
        <relationshipName>GivingTransactions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MovedAmount__c</fullName>
        <label>Moved Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReceivingFinancialAccount__c</fullName>
        <label>Receiving Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Transaction</label>
    <nameField>
        <displayFormat>TR-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Must_Provide_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>MovedAmount__c == null || MovedAmount__c == 0</errorConditionFormula>
        <errorDisplayField>MovedAmount__c</errorDisplayField>
        <errorMessage>Moved Amount is mandatory and greater than 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SameOwnership</fullName>
        <active>false</active>
        <errorConditionFormula>ReceivingFinancialAccount__r.FinServ__PrimaryOwner__c !=  GivingFinancialAccount__r.FinServ__PrimaryOwner__c</errorConditionFormula>
        <errorMessage>Cannot move money between Financial Accounts of different customers.</errorMessage>
    </validationRules>
</CustomObject>